src/styles/indexPage.styl
borderShad =
    border-radius 0.5rem
    border 0.25rem white solid
    box-shadow -0.5rem 0.5rem 1.5rem rgba(0, 0, 0, 0.3)

#intro
    background #4367D7 url("/img/Circles.svg") 250% 50% / 90% no-repeat
    position relative
    overflow hidden
    padding 0 1rem 9%
    @media (max-width 1400px)
        background-position center bottom
    h1 em
        display block
        font-size 7.2rem
        font-size 6vw
        @media (max-width 1400px)
            font-size 4rem
        line-height 1em
        font-style initial
    h1
        font-size 3rem
        font-size 2.5vw
        line-height 1.5em
        @media (max-width 1400px)
            font-size 1.5rem
    p.big
        font-size 1.5rem
        font-size 1.25vw
        @media (max-width 1400px)
            font-size 1rem
    &::before
        content ''
        position absolute
        left 0
        top 0
        bottom 0
        display block
        width 33%
        background linear-gradient(to left, transparent, act)
        z-index -1
    &::after
        position absolute
        background transparent url("/img/WavesBottom.svg") center bottom / cover no-repeat
        content ''
        display block
        width 100%
        left 0
        bottom 0
        height 0
        padding-top 10%
    button, .button
        font-size 1.5rem
        font-size 1.25vw
        border-width 0.1em
        @media (max-width 1400px)
            font-size 1.25rem
    .platformIcon
        font-size 1.5rem
        font-size 1.25vw
        opacity 65%
        vertical-align middle
        margin 1rem 0 0
        margin-inline-start 0.5em
        @media (max-width 1400px)
            font-size 1rem
            margin 1rem 0.25rem 0
    .wideinner
        display flex
        align-items flex-start
        padding 0 5%
        padding 0 calc(5.2% - 1rem)
        @media (max-width 1400px)
            flex-flow column wrap


.aScrollDownIcon
    position absolute
    bottom 2rem
    bottom 3vw
    left 50%
    margin-left -44px
    margin-left -2.5vw
    fill transparent
    z-index 2
    width 88px
    height 88px
    width 5vw
    height 5vw

.wideinner
    padding 0 5rem
    @media (max-width 960px)
        padding 0 2rem
    @media (max-width 640px)
        padding 0 1rem

#theIllustration
    perspective 67vw
    perspective-origin 17% center
    [lang="ar"] &
        perspective-origin 83% center
    margin 14rem 0
    padding 0 7% 0
    padding-inline-start 3%
    position relative
    @media (max-width 1400px)
        margin 1rem 0 3rem
        padding 0 5%
        perspective-origin center center

#thePunchText
    margin 10rem 0 20rem
    @media (max-width 1400px)
        margin 6rem 0 1rem
        text-align center

#theLittlePlanet, #theBiggerPlanet, #theRocket, #theHammerCat, #theGamepadCat
    filter drop-shadow(-50px 50px 25px rgba(0, 0, 0, 0.3))
    position absolute

#theHomepageScreenshot
    border-radius 0.5rem
    border 0.25rem white solid
    transform translate(-5%, 0) rotate3d(0, 1, 0, -30deg)
    box-shadow -50px 50px 75px rgba(0, 0, 0, 0.3)
    animation homepageFloat cubic-bezier(0.3, 0, 0.7, 1) 7s infinite
    will-change transform
    [lang="ar"] &
        animation homepageFloatFlipped cubic-bezier(0.3, 0, 0.7, 1) 7s infinite
    @media (max-width 1400px)
        transform rotate3d(0, 1, 0, 0)
        animation homepageFloatAlt cubic-bezier(0.3, 0, 0.7, 1) 7s infinite

@keyframes homepageFloat
    0%, 100%
        transform translate(-5%, 0) rotate3d(0.1, 1, 0, -30deg)
    50%
        transform translate(-5%, 0) rotate3d(-0.1, 1, 0, -30deg)
@keyframes homepageFloatFlipped
    0%, 100%
        transform translate(5%, 0) rotate3d(0.1, 1, 0, 30deg)
    50%
        transform translate(5%, 0) rotate3d(-0.1, 1, 0, 30deg)
@keyframes homepageFloatAlt
    0%, 100%
        transform rotate3d(0.5, 1, 0, 3deg)
    50%
        transform rotate3d(0.5, 1, 0, -3deg)

#theGamepadCat
    bottom -1%
    width 70vw
    right 3rem
    [lang="ar"] &
        right unset
        left 3rem

#theHammerCat
    left 25%
    bottom 19rem
    width 12%
    @media (max-width 1400px)
        bottom 8%
    [lang="ar"] &
        left 3%

#theRocket
    width 25vw
    left -2.5%
    top -26%

#theLittlePlanet
    top 5%
    right 1%
    width 10vw
    transform rotate(-13deg)
    [lang="ar"] &
        right 25%

#theBiggerPlanet
    left 8vw
    bottom 8%
    width 15vw
    transform rotate(15deg)
    [lang="ar"] &
        left unset
        right 8vw
        bottom 10%

.aFeatureList
    padding 2rem 0
    img, video, embed, iframe
        {borderShad}
.aFeature
    padding 1rem 2rem
    margin 0 0 1rem
    margin-inline-start 2rem
    position relative
    cursor pointer
    border-radius 0.2rem 0.5rem 0.5rem 0.2rem
    {trans}
    font-size 1.25rem
    font-size 1vw
    line-height 1.5em
    border-width 0.1em
    @media (max-width 1400px)
        font-size 1rem
        margin 0 0 1rem 0
    &:hover
        box-shadow -0.5rem 0.5rem 1.5rem rgba(0, 0, 0, 0.3)
    h3
        font-size 300%
        line-height 1em
        font-weight 100
        margin 0
        padding 0
    &.active
        border-left 4px solid accent1
    p
        &:last-child
            padding-bottom 0
            margin-bottom 0
.aFeature-aPlaybackThumb
    position absolute
    top 0
    left -2px
    border-radius 100%
    width 1rem
    height 1rem
    background accent1
    transform translate(-50%, -50%)
    transition 0.5s linear top
    display none
    .aFeature.active &
        display block

#demos
    h2
        font-size 4rem
    .hSub
        margin-bottom 1rem
    .wideinner
        margin-top 2rem
        margin-bottom 2rem
.aGame
    h4
        font-size 2rem
        font-weight 600
    text-align center
.aGameMedia
    {borderShad}
    position relative
    line-height 0
    margin-bottom 1rem
    img, embed, video
        width 100%
        {trans}
    .aGameButton
        @extends .aCardButton
    &:hover
        button, .button
            opacity 1
        img
            opacity 0.65

